[metadata]
name = equinox
version = 0.7.1
description = Equinox is an open source platform that supports the holistic risk management of sustainable finance projects.
long_description = file: README.md
url = https://www.openriskmanagement.com/equinox/
author = Open Risk
author_email = info@openriskmanagement.com
license = Apache
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.0
install_requires =
    Django >= 4.0